Modelling the time between book checkouts at a library

--- a/exponential_distribution.ipynb
+++ b/exponential_distribution.ipynb
@@ -37,7 +37,7 @@
         "id": "quSLS_t8krRk",
         "outputId": "88c6d8c1-5efb-45ca-a616-40cde5e25fda"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "WP3_ALc2k6KM"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -96,7 +96,15 @@
         "    display(Image(filename='library_books.jpg'))  # Replace with an actual image file\n",
         "    print(\"Displaying cover image...\")\n",
         "except Exception as e:\n",
-        "    print(\"Error displaying cover image:\", e)"
+        "    print(\"Error displaying cover image:\", e)\n",
+        "\n",
+        "# Real-world Example: Modeling the time between book checkouts at a library\n",
+        "# Assume the average checkout rate is 5 books per hour (lambda=5)\n",
+        "lambda_param = 5  # rate parameter\n",
+        "size = 1000  # number of samples\n",
+        "\n",
+        "print(\"Generating exponential distribution samples...\")\n",
+        "exponential_samples = np.random.exponential(scale=1/lambda_param, size=size)"
       ],
       "metadata": {
         "id": "moTcYhshlBdQ"
