--- a/exponential_distribution.ipynb
+++ b/exponential_distribution.ipynb
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "WP3_ALc2k6KM"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,10 +104,23 @@
         "size = 1000  # number of samples\n",
         "\n",
         "print(\"Generating exponential distribution samples...\")\n",
-        "exponential_samples = np.random.exponential(scale=1/lambda_param, size=size)"
+        "exponential_samples = np.random.exponential(scale=1/lambda_param, size=size)\n",
+        "\n",
+        "print(\"Plotting histogram...\")\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "plt.hist(exponential_samples, bins=30, density=True, alpha=0.6, color='b', label='Exponential Distribution')"
       ],
       "metadata": {
         "id": "moTcYhshlBdQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "25SMlXW-orSR"
       },
       "execution_count": null,
       "outputs": []
