Initialize Bayesian model with prior probability.

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1QPqk8Eb9Y79SndFQEE9b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +26,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LqocHwh_u05Q"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Bayes' Theorem to predict a student's probability of passing an exam based on study hours and past quiz performance.\n",
@@ -48,6 +38,20 @@
       "metadata": {
         "id": "4g9s3Z98vgYC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Define the prior probability: Probability of passing before new evidence\n",
+        "prior_pass = 0.7  # Assume 70% of students typically pass"
+      ],
+      "metadata": {
+        "id": "mQDsfge4v7gH"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
