Add function to compute likelihood based on study hours and quiz scores.

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -50,7 +50,27 @@
       "metadata": {
         "id": "mQDsfge4v7gH"
       },
-      "execution_count": 1,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define likelihoods based on study hours and quiz scores\n",
+        "def likelihood(study_hours, quiz_score):\n",
+        "    \"\"\"Returns P(Data | Pass) and P(Data | Fail) based on study hours and quiz scores.\"\"\"\n",
+        "    # Assume Gaussian distribution for study hours and quiz scores\n",
+        "    mean_pass_study = 6  # Average study hours for those who pass\n",
+        "    std_pass_study = 2\n",
+        "    mean_fail_study = 3  # Average study hours for those who fail\n",
+        "    std_fail_study = 1.5\n",
+        "\n",
+        "    mean_pass_quiz = 80  # Average quiz score for those who pass"
+      ],
+      "metadata": {
+        "id": "DjZYux9Mwbnm"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
