Implement Bayesian update function for probability calculation

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -65,7 +65,20 @@
         "    mean_fail_study = 3  # Average study hours for those who fail\n",
         "    std_fail_study = 1.5\n",
         "\n",
-        "    mean_pass_quiz = 80  # Average quiz score for those who pass"
+        "    mean_pass_quiz = 80  # Average quiz score for those who pass\n",
+        "\n",
+        "    # Compute posterior probability using Bayes' Theorem\n",
+        "def bayesian_update(study_hours, quiz_score):\n",
+        "    p_data_given_pass, p_data_given_fail = likelihood(study_hours, quiz_score)\n",
+        "\n",
+        "    # Compute marginal probability\n",
+        "    p_fail = 1 - prior_pass\n",
+        "    p_data = (p_data_given_pass * prior_pass) + (p_data_given_fail * p_fail)\n",
+        "\n",
+        "    # Compute posterior probability\n",
+        "    posterior_pass = (p_data_given_pass * prior_pass) / p_data\n",
+        "\n",
+        "    return posterior_pass"
       ],
       "metadata": {
         "id": "DjZYux9Mwbnm"
