Add example case for probability calculation

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -85,6 +85,20 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example: Student with 5 study hours and a quiz score of 75\n",
+        "study_hours = 5\n",
+        "quiz_score = 75\n",
+        "posterior_probability = bayesian_update(study_hours, quiz_score)"
+      ],
+      "metadata": {
+        "id": "2wMIvPmVyOV0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
