Display the final computed probability

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -99,6 +99,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Updated probability of passing the exam: {posterior_probability:.2f}\")\n"
+      ],
+      "metadata": {
+        "id": "mpW11aCaykX0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
