explained how it works. Bayems theorem

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "mQDsfge4v7gH"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "DjZYux9Mwbnm"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -110,6 +110,22 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "How This Works:\n",
+        "We start with an assumption that 70% of students pass.\n",
+        "We calculate the likelihood of a student passing based on their study hours and quiz scores.\n",
+        "We apply Bayes’ Theorem to update the probability of passing given the new data.\n",
+        "Insights and Practical Use Cases:\n",
+        "✅ Adaptive Learning: Schools can use Bayesian models to identify students at risk and recommend study plans.\n",
+        "✅ Personalized Study Plans: Students can adjust their strategies based on real-time probability updates.\n",
+        "✅ Education Analytics: Universities can track student progress and optimize their academic programs."
+      ],
+      "metadata": {
+        "id": "9DCc0qh8zIUT"
+      }
     }
   ]
 }
