printed the probability

--- a/Bayesian_probability.ipynb
+++ b/Bayesian_probability.ipynb
@@ -42,33 +42,80 @@
     {
       "cell_type": "code",
       "source": [
+        "pip install numpy\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WnvP9hCc0HMt",
+        "outputId": "64e708af-193e-4254-ed55-629a44c981f6"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (1.26.4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
-        "\n",
-        "# Define the prior probability: Probability of passing before new evidence\n",
-        "prior_pass = 0.7  # Assume 70% of students typically pass"
+        "\n"
       ],
       "metadata": {
         "id": "mQDsfge4v7gH"
       },
-      "execution_count": 1,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Define likelihoods based on study hours and quiz scores\n",
+        "# Prior probability of passing\n",
+        "prior_pass = 0.7  # Assume 70% of students typically pass\n",
+        "\n",
+        "# Define likelihood function\n",
         "def likelihood(study_hours, quiz_score):\n",
         "    \"\"\"Returns P(Data | Pass) and P(Data | Fail) based on study hours and quiz scores.\"\"\"\n",
         "    # Assume Gaussian distribution for study hours and quiz scores\n",
-        "    mean_pass_study = 6  # Average study hours for those who pass\n",
+        "    mean_pass_study = 6\n",
         "    std_pass_study = 2\n",
-        "    mean_fail_study = 3  # Average study hours for those who fail\n",
+        "    mean_fail_study = 3\n",
         "    std_fail_study = 1.5\n",
         "\n",
-        "    mean_pass_quiz = 80  # Average quiz score for those who pass\n",
+        "    mean_pass_quiz = 80\n",
+        "    std_pass_quiz = 10\n",
+        "    mean_fail_quiz = 50\n",
+        "    std_fail_quiz = 15\n",
         "\n",
-        "    # Compute posterior probability using Bayes' Theorem\n",
+        "    # Compute Gaussian probabilities\n",
+        "    p_data_given_pass_study = (1 / (std_pass_study * np.sqrt(2 * np.pi))) * \\\n",
+        "                              np.exp(-((study_hours - mean_pass_study)**2) / (2 * std_pass_study**2))\n",
+        "\n",
+        "    p_data_given_fail_study = (1 / (std_fail_study * np.sqrt(2 * np.pi))) * \\\n",
+        "                              np.exp(-((study_hours - mean_fail_study)**2) / (2 * std_fail_study**2))\n",
+        "\n",
+        "    p_data_given_pass_quiz = (1 / (std_pass_quiz * np.sqrt(2 * np.pi))) * \\\n",
+        "                             np.exp(-((quiz_score - mean_pass_quiz)**2) / (2 * std_pass_quiz**2))\n",
+        "\n",
+        "    p_data_given_fail_quiz = (1 / (std_fail_quiz * np.sqrt(2 * np.pi))) * \\\n",
+        "                             np.exp(-((quiz_score - mean_fail_quiz)**2) / (2 * std_fail_quiz**2))\n",
+        "\n",
+        "    # Multiply study and quiz probabilities to get joint probability\n",
+        "    p_data_given_pass = p_data_given_pass_study * p_data_given_pass_quiz\n",
+        "    p_data_given_fail = p_data_given_fail_study * p_data_given_fail_quiz\n",
+        "\n",
+        "    return p_data_given_pass, p_data_given_fail  # Ensure values are returned\n",
+        "\n",
+        "# Bayesian update function\n",
         "def bayesian_update(study_hours, quiz_score):\n",
+        "    # Call the likelihood function\n",
         "    p_data_given_pass, p_data_given_fail = likelihood(study_hours, quiz_score)\n",
         "\n",
         "    # Compute marginal probability\n",
@@ -78,38 +125,32 @@
         "    # Compute posterior probability\n",
         "    posterior_pass = (p_data_given_pass * prior_pass) / p_data\n",
         "\n",
-        "    return posterior_pass"
-      ],
-      "metadata": {
-        "id": "DjZYux9Mwbnm"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Example: Student with 5 study hours and a quiz score of 75\n",
+        "    return posterior_pass\n",
+        "\n",
+        "# Test with example values\n",
         "study_hours = 5\n",
         "quiz_score = 75\n",
-        "posterior_probability = bayesian_update(study_hours, quiz_score)"
+        "posterior_probability = bayesian_update(study_hours, quiz_score)\n",
+        "\n",
+        "print(f\"Updated probability of passing the exam: {posterior_probability:.2f}\")"
       ],
       "metadata": {
-        "id": "2wMIvPmVyOV0"
+        "id": "DjZYux9Mwbnm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b6d510be-8779-4329-eb0f-b89b49b38c2b"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f\"Updated probability of passing the exam: {posterior_probability:.2f}\")\n"
-      ],
-      "metadata": {
-        "id": "mpW11aCaykX0"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated probability of passing the exam: 0.95\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
